modification of the header and adding epita and gconfs' logo

--- a/slides/header.tex
+++ b/slides/header.tex
@@ -1,2 +1,6 @@
 \usepackage{graphicx}
-
+\setbeamertemplate{footline}{\hfill\insertframenumber/\inserttotalframenumber}
+\title{Introduction à UNIX}
+\institute{\includegraphics[width=2.42cm]{ressources/epita.png}\newline\newline\includegraphics[width=2.1337cm]{ressources/gconfs.png}}
+\author{Paul 'Dettorer' Hervot \newline \and Clément 'wxcafé' Hertling \newline \and Kaci
+'Bruce' Adjou}
